# Swalay_pabbly

./: .gitignore  IMPLEMENTATION_COMPLETE.md  MESSAGE_FLOW_DIAGRAM.md  MESSAGE_STATUS_INDICATORS.md  QUICK_START.md  README_WEBSOCKET.md  WEBSOCKET_IMPLEMENTATION.md  test.json
Backend/: config.py  main.py  models.py  pyproject.toml  requirements.txt
Backend/app/api/routes/: auth.py  broadcasts.py  chatbot.py  contact_lists.py  contacts.py  onboarding.py  templates.py
Backend/app/core/: security.py
Backend/app/services/: gemini.py  templates.py
Backend/app/services/rag/: __init__.py  config.py  knowledge_base_builder.py  service.py
Backend/scripts/: test_rag.py
Frontend/: install_deps.bat  middleware.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
Frontend/src/api/: auth.ts  broadcasts.ts  chatbot.ts  contactLists.ts  contacts.ts  messages.ts  templates.ts  whatsappApi.ts
Frontend/src/app/: globals.css  layout.tsx  page.js
Frontend/src/app/broadcast/: page.tsx
Frontend/src/app/contacts/: page.tsx
Frontend/src/app/dashboard/: page.tsx
Frontend/src/app/inbox/: page.tsx
Frontend/src/app/login/: page.tsx
Frontend/src/app/profile/: page.tsx
Frontend/src/app/signup/: page.tsx
Frontend/src/app/templates/: page.tsx
Frontend/src/components/: ChatList.jsx
Frontend/src/components/auth/: FacebookLoginButton.tsx
Frontend/src/components/broadcast/: BroadcastForm.tsx  PhoneInput.tsx  (+1 more)
Frontend/src/hooks/: useApi.ts  useFacebookSDK.ts  useWebSocketMessages.ts
Frontend/src/lib/: socketService.ts  templateMapper.ts
(+22 files in other folders)
